Content added in Branch1

--- a/PracticeApp1/PracticeApp1/PracticeApp1.csproj
+++ b/PracticeApp1/PracticeApp1/PracticeApp1.csproj
@@ -8,6 +8,7 @@
     <ProjectGuid>{98118D3D-E736-46F0-BF6A-42B8E059AE7F}</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="Branch1.html" />
     <Content Include="Master.txt" />
   </ItemGroup>
 </Project>
