New Content added in branch 1

--- a/PracticeApp1/PracticeApp1/PracticeApp1.csproj
+++ b/PracticeApp1/PracticeApp1/PracticeApp1.csproj
@@ -9,6 +9,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Branch1.html" />
-    <Content Include="Master.txt" />
+    <Content Include="Branch1Text.txt" />
   </ItemGroup>
 </Project>
